# bmboot

./: .gitignore  .gitlab-ci.yml  .gitmodules  Aarch64BareMetal.cmake  CHANGELOG.md  CMakeLists.txt  Doxyfile  LICENSE  README.md  UPGRADING.md  bmboot.spec  reserve-va-range.py
bmbook/: architecture.tex  bmbook.tex  cernatsnote.cls  core-settings.tex  executable-formats.tex  glossary.tex  interrupts.tex  intro-and-hardware.tex  references.bib  sourcecode.tex
cmake/: Bmboot.cmake  FileEmbed.cmake
cmake/fgc-next/: Aarch64BareMetal.cmake
cmake/fgc-next/manager/: CMakeLists.txt
cmake/fgc-next/monitor/: CMakeLists.txt
cmake/fgc-next/payload/: CMakeLists.txt
cmake/standalone/manager/: CMakeLists.txt
cmake/standalone/monitor/: CMakeLists.txt
cmake/standalone/payload/: CMakeLists.txt
doc/: api-base.rst  api-manager.rst  api-master.rst  api-message-queue.rst  api-payload.rst  api-slave.rst  bsp.rst  build-tree.drawio  build.rst  cli.rst  conf.py  configuration.rst  core-dump.rst  design-decisions.rst  exceptions.rst  external-requirements.rst  faq.rst  index.rst  introduction.rst  ipi.rst  literature.rst  memory-map.rst  payload.rst  privilege-modes.drawio  questions.rst  realms-simplified.drawio  realms.drawio  requirements.rst  testing.rst  todo.rst
include/: bmboot.hpp  bmboot_master.hpp  bmboot_slave.hpp
include/bmboot/: domain.hpp  domain_helpers.hpp  manager_configuration.hpp  message_queue.hpp  payload_runtime.h  payload_runtime.hpp
slave/zynqmp/: vectors.cpp
slave/zynqmp/cpu1/: payload.ld
slave/zynqmp/el1/: bspconfig.h
slave/zynqmp/el3/: asm_vectors.S
src/: bmboot_internal.hpp  bmboot_master.cpp  bmboot_memmap.hpp  bmboot_slave.cpp  coredump_linux.cpp  coredump_linux.hpp  cpu_state.hpp  slave_lowlevel.S  slave_main.cpp
src/benchmarks/MemoryLatency/: MemoryLatency.c  MemoryLatency_arm.s  README.txt
src/benchmarks/fpga_latency/: fpga_latency.cpp  fpga_latency.s
src/executor/: abi_defs.inc  armv8a.hpp  executor.cpp  executor.hpp  executor_asm.S  executor_asm.hpp  gicv2.hpp
src/executor/monitor/: monitor.cpp  monitor.ld.in  monitor_asm.S  monitor_asm.hpp  monitor_cpu1.ld  monitor_cpu2.ld  monitor_cpu3.ld  monitor_internal.hpp  platform_interrupt_controller.hpp  smc_handlers.cpp
src/executor/payload/: payload.ld  payload.ld.in  payload_cpu1.ld  payload_cpu2.ld  payload_cpu3.ld  payload_runtime.cpp  payload_runtime_internal.hpp  syscalls.cpp
src/executor_domain/: executor_lowlevel.S  executor_lowlevel.hpp  monitor.cpp  payload_runtime.cpp  syscalls.h
src/executor_domain/zynqmp/: asm_vectors.S  vectors.cpp
src/executor_domain/zynqmp/cpu1/: monitor.ld  monitor.ld.in  payload.ld  payload.ld.in
src/executor_domain/zynqmp/el1/: payload_runtime_internal.hpp  vectors_el1.cpp
src/executor_domain/zynqmp/el3/: vectors_el3.cpp
src/mach/: mach_baremetal.hpp  mach_baremetal_defs.hpp  mach_linux.hpp  zynqmp_baremetal.cpp  zynqmp_linux.cpp
src/manager/: configuration.cpp  coredump_linux.cpp  coredump_linux.hpp  domain.cpp  domain_helpers.cpp
src/payloads/: access_violation.cpp  adrian_irq_demo.cpp  exception_caught_demo.cpp  hello_world.cpp  message_queue.cpp  pmu_demo.cpp  timer_demo.cpp
src/platform/zynqmp/: zynqmp.hpp
src/platform/zynqmp/executor/: asm_vectors.S  boot.S  sleep.cpp  translation_table.S  xil-crt0.S  zynqmp_executor.hpp
src/platform/zynqmp/executor/monitor/: interrupt_controller.cpp  vectors_el3.cpp
src/platform/zynqmp/executor/payload/: vectors_el1.cpp
src/platform/zynqmp/manager/: zynqmp_manager.cpp  zynqmp_manager.hpp
src/tests/: tests.cpp
src/tools/: bmctl.cpp  bmtest.cpp  bumctl.cpp  console.cpp  message_queue_demo.cpp  message_queue_demo.hpp  timer_demo.cpp
src/utility/: crc32.c  crc32.hpp  message_queue.cpp  mmap.hpp  to_string.cpp
